--- a/com.apple.notificationsettings.All.plist
+++ b/com.apple.notificationsettings.All.plist
@@ -112,6 +112,114 @@
 			<key>CriticalAlertEnabled</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.adobe.acc.AdobeCreativeCloud</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.adobe.acc.AdobeDesktopService</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.microsoft.Excel</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.microsoft.onenote.mac</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.microsoft.Powerpoint</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>AlertType</key>
+			<integer>2</integer>
+			<key>BadgesEnabled</key>
+			<true/>
+			<key>BundleIdentifier</key>
+			<string>com.microsoft.Word</string>
+			<key>NotificationsEnabled</key>
+			<true/>
+			<key>ShowInLockScreen</key>
+			<true/>
+			<key>ShowInNotificationCenter</key>
+			<true/>
+			<key>SoundsEnabled</key>
+			<true/>
+			<key>CriticalAlertEnabled</key>
+			<true/>
+		</dict>
 	</array>
 </dict>
 </plist>
